--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password = dbpassword
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+server.port=5000
 
 
