--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.webjars</groupId>
